# mdgw

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/book/: OrderBook.cpp  OrderBook.hpp
src/gateway/: BookUpdate.hpp  MarketDataGateway.hpp  OkxMarketDataGateway.cpp  OkxMarketDataGateway.hpp
src/metrics/: Metrics.cpp  Metrics.hpp
src/util/: Json.hpp  Log.hpp  SPSCRingBuffer.hpp  Time.hpp
tests/: test_orderbook.cpp  test_ringbuffer.cpp
